[package]
name = "input_helper"
version = "0.1.0"
edition = "2021"

[features]
default = []
winit = ["dep:winit"]
sdl = ["dep:sdl2"]
gilrs = ["dep:gilrs"]

[dependencies]
log = "0.4"
event_feed = "0.1"

winit = {version = "0.26", optional = true}
sdl2 = {version = "0.35", optional = true}
gilrs = {version = "0.8", optional = true}

