[package]
name = "input_helper"
description = "Generic types and tools for unifying input libraries."
version = "0.1.2"
authors = ["AlexiWolf <alexiwolf@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/input_helper"
homepage = "https://github.com/AlexiWolf/input_helper"

[features]
default = []
winit = ["dep:winit"]
sdl = ["dep:sdl2"]
gilrs = ["dep:gilrs"]

[dependencies]
log = "0.4"
event_feed = "0.1"
keyboard-types = "0.6"

winit = {version = "0.26", optional = true}
sdl2 = {version = "0.35", optional = true}
gilrs = {version = "0.8", optional = true}

